started work with ts

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+    <div id="background"></div>
+    
     <div class="header color-theme">
         <div class="container-fluid">
             <div class="row align-items-center">
