--- a/start.html
+++ b/start.html
@@ -59,7 +59,7 @@
                     </div>
                 </div>
                 <div class="row d-flex align-items-center justify-content-center">
-                    <h2 id="startButton" class="d-flex justify-content-center align-items-center"
+                    <h2 id="startButton" class="d-flex justify-content-center align-items-center color-theme-border px-4"
                         onclick="document.location='/index.html'">Start!</h2>
 
                 </div>
@@ -70,14 +70,13 @@
 
     <!-- <footer></footer> -->
 
-    <!-- <script src="/scripts/index.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
         crossorigin="anonymous"></script>
-    <script src="/scripts/start.js"></script>
+    <!-- <script src="/scripts/start.js"></script> -->
 </body>
 
 </html>
