--- a/start.html
+++ b/start.html
@@ -59,8 +59,8 @@
                     </div>
                 </div>
                 <div class="row d-flex align-items-center justify-content-center">
-                    <h2 id="startButton" class="d-flex justify-content-center align-items-center color-theme-border px-4"
-                        onclick="document.location='/index.html'">Start!</h2>
+                    <h2 id="startButton"
+                        class="d-flex justify-content-center align-items-center color-theme-border px-4">Start!</h2>
 
                 </div>
             </div>
@@ -76,7 +76,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
         crossorigin="anonymous"></script>
-    <!-- <script src="/scripts/start.js"></script> -->
+    <script src="/scripts/start.js"></script>
 </body>
 
 </html>
