--- a/index.html
+++ b/index.html
@@ -73,7 +73,10 @@
     </div>
 
     <!-- <footer></footer> -->
-    
+    <script src="./scripts/cells.js"></script>
+    <script src="./scripts/entities.js"></script>
+    <script src="./scripts/map.js"></script>
+    <script src="./scripts/game.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
