--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/controls.css">
-    <link rel="stylesheet" href="/css/objects.css">
+    <link rel="stylesheet" href="/css/entities.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <title>Extra task for Web</title>
