--- a/start.html
+++ b/start.html
@@ -16,10 +16,14 @@
         <div class="container-fluid">
             <div class="row align-items-center">
                 <img src="/images/HITS_Logo.png" id="logo" class="mr-3">
-                <h5 class="mr-2 my-0">HP: </h5>
-                <h5 id="HP" class="mr-3 my-0">100</h5>
-                <h5 class="mr-3 my-0">Score: </h5>
-                <h5 id="score" class="mr-3 my-0">0</h5>
+                <div class="d-flex flex-row">
+                    <h5 class="mr-2 my-0">HP: </h5>
+                    <h5 id="HP" class="mr-3 my-0">0</h5>
+                </div>
+                <div class="d-flex flex-row">
+                    <h5 class="mr-3 my-0">Score: </h5>
+                    <h5 id="score" class="mr-3 my-0">0</h5>
+                </div>
             </div>
         </div>
 
@@ -55,6 +59,16 @@
                             <option value="1">Низкая</option>
                             <option value="2">Средняя</option>
                             <option value="3">Высокая</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group row d-flex align-items-center">
+                    <label for="numberOfLives" class="col-sm-4 col-form-label">Количество жизней</label>
+                    <div class="col-sm-8">
+                        <select class="form-control color-theme " id="numberOfLives">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
                         </select>
                     </div>
                 </div>
