--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
     <div id="background"></div>
+    <div id="screenForDamagingHero"></div>
 
     <div class="header color-theme">
         <div class="container-fluid">
