--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
                     <h5 class="mr-3 my-0">Score: </h5>
                     <h5 id="score" class="mr-3 my-0">0</h5>
                 </div>
+
+                <div class="d-flex flex-row">
+                    <h5 class="mr-3 my-0">Bonus: </h5>
+                    <h5 id="bonus" class="mr-3 my-0">0</h5>
+                </div>
             </div>
         </div>
 
